Update format settings

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -4,5 +4,10 @@
     "rules": {
       "exclude": ["no-explicit-any", "require-await"]
     }
+  },
+  "fmt": {
+    "files": {
+      "exclude": ["README.md"]
+    }
   }
 }
